log/build_2024-12-06_22-13-46/vda5050_adapter/stderr.log
  File "/home/thegodset/fyp/install/vda5050_adapter/lib/python3.10/site-packages/vda5050_adapter/position_adapter.py", line 74
    self.position.
                  ^
SyntaxError: invalid syntax

